--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="PencilIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PencilIcon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="User" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\User.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
